# AmericanMusic

./: .qmlls.ini  CMakeLists.txt  Main.qml  MusicPlayerManager.qml  RectTest.qml  SongListModel.qml  TestRect.qml  main.cpp  musicplayer.cpp  musicplayer.h  mysqlTest.py  pathutils.cpp  pathutils.h  playlistmodel.cpp  playlistmodel.h  qml.qrc  qmldir  src.qrc
BottomBar/: BottomBar.qml  IconButton1.qml  MusicPlayer.qml  SongInfo.qml
CustomUI/: CollapseItem.qml  TokyoButton.qml
LeftPage/: CollapseList.qml  CollapseList1.qml  ExpandButton.qml  LeftPage.qml
LeftPage/Utils/: pathutils.cpp  pathutils.h
RightPage/: RightPage.qml
RightPage/Component/: PodCastCover.qml
RightPage/StackPages/: ArticleCard.qml  Carousel.qml  CarouselImage.qml  CarouselSlide.qml  CherryPick.qml  HoverCard.qml  MusicCherryPick.qml  OfficialMusic.qml  PodCastWidget.qml  RankingCard.qml  RankingPage.qml  RecentMusic.qml  SongItem.qml  backup.txt
RightPage/StackPages/LocalMusic/: HeaderButton.qml  PlaylistDetailPage.qml  PlaylistHeader.qml  SongItem1.qml
RightPage/TitleBar/: TitleBar.qml
TitleBar/: IconButton.qml  SearchField.qml  TitleBar.qml  UserProfile.qml
